--- a/index.html
+++ b/index.html
@@ -143,11 +143,11 @@
                     </div>
                 </div>
                 <div class="col-lg-6 col-md-12 col-sm-12 image-column">
-                    <div class="image-box wow slideInRight" data-wow-delay="0ms" data-wow-duration="1500ms">
+                    <div class="image-box wow slideInRight" data-wow-delay="0ms" data-wow-duration=700ms">
                         <figure class="image image-1"><img src="assets/images/banner/c-1.svg" alt=""></figure>
                         <figure class="image image-2 float-bob-y"><img src="assets/images/banner/c-2.svg" alt="">
                         </figure>
-                        <figure class="image image-3 wow slideInDown" data-wow-delay="500ms" data-wow-duration="1500ms">
+                        <figure class="image image-3 wow slideInDown" data-wow-delay="500ms" data-wow-duration="700ms">
                             <img src="assets/images/banner/c-3.svg" alt=""></figure>
                         <figure class="image image-4"><img src="assets/images/banner/c-4.svg" alt=""></figure>
                         <figure class="image image-5 rotate-me"><img src="assets/images/banner/c-5.png" alt=""></figure>
@@ -165,7 +165,7 @@
             <div class="row clearfix align-items-center">
                 <div class="col-lg-6 col-md-6 col-sm-12 image-column order-2 order-md-1">
                     <div id="image_block_01">
-                        <div class="image-box wow slideInLeft" data-wow-delay="0ms" data-wow-duration="1500ms">
+                        <div class="image-box wow slideInLeft" data-wow-delay="0ms" data-wow-duration="700ms">
                             <figure class="image"><img src="assets/images/resource/about-des.svg" alt="">
                             </figure>
                         </div>
@@ -174,11 +174,11 @@
                 <div class="col-lg-6 col-md-6 col-sm-12 content-column order-1 order-md-2">
                     <div id="content_block_01">
                         <div class="content-box">
-                            <div class="sec-title wow slideInUp" data-wow-delay="00ms" data-wow-duration="1500ms">
+                            <div class="sec-title wow slideInUp" data-wow-delay="00ms" data-wow-duration="700ms">
                                 <p>Who are we?</p>
                                 <h2>Discover Pinhead <br /> Analytics</h2>
                             </div>
-                            <div class="text wow slideInUp" data-wow-delay="00ms" data-wow-duration="1500ms">
+                            <div class="text wow slideInUp" data-wow-delay="00ms" data-wow-duration="700ms">
                                 <p>We are India's best bunch of Data analysts, Data engineers & Data scientists. We
                                     actively work with companies from around the world who are looking to embrace the
                                     data deluge and create value out of it as a result. We partner with companies from
@@ -187,7 +187,7 @@
                                 </p>
                             </div>
 
-                            <div class="btn-box wow slideInUp" data-wow-delay="00ms" data-wow-duration="1500ms"><a
+                            <div class="btn-box wow slideInUp" data-wow-delay="00ms" data-wow-duration="700ms"><a
                                     href="index.html" class="theme-btn style-one">Know More</a></div>
                         </div>
                     </div>
@@ -200,7 +200,7 @@
     <!-- process-section -->
     <section class="process-section bg-color-1 t-services-section">
         <div class="pattern-box">
-            <div class="pattern-1 wow slideInDown animated" data-wow-delay="500ms" data-wow-duration="1500ms"
+            <div class="pattern-1 wow slideInDown animated" data-wow-delay="200ms" data-wow-duration="700ms"
                 style="background-image: url(assets/images/shape/pattern-3.png)"></div>
         </div>
         <div class="auto-container">
@@ -208,14 +208,14 @@
                 <div class="col-lg-6 col-sm-12 content-column">
                     <div id="content_block_02">
                         <div class="content-box">
-                            <div class="sec-title wow slideInUp" data-wow-delay="00ms" data-wow-duration="1500ms">
+                            <div class="sec-title wow slideInUp" data-wow-delay="00ms" data-wow-duration="700ms">
                                 <h2>Getting Started with us</h2>
                             </div>
-                            <div class="text wow slideInUp" data-wow-delay="300ms" data-wow-duration="1500ms">
+                            <div class="text wow slideInUp" data-wow-delay="150ms" data-wow-duration="700ms">
                                 <p>With the easy onboarding process at Pinhead analytics, go from identifying to solving
                                     your problems expeditiously.</p>
                             </div>
-                            <div class="inner-box wow slideInUp" data-wow-delay="600ms" data-wow-duration="1500ms">
+                            <div class="inner-box wow slideInUp" data-wow-delay="300ms" data-wow-duration="700ms">
                                 <div class="single-item">
                                     <div class="count-box">
 
