--- a/index.html
+++ b/index.html
@@ -61,8 +61,8 @@
                             <div class="collapse navbar-collapse show clearfix" id="navbarSupportedContent">
                                 <ul class="navigation clearfix">
                                     <li class="current"><a href="index.html">Home</a></li>
-                                    <li><a href="index.html">Services</a></li>
-                                    <li><a href="index.html">Blog</a></li>
+                                    <li><a href="#service">Services</a></li>
+                                    <li><a href="#blog">Blog</a></li>
                                     <li><a href="index.html">Contact Us</a></li>
                                 </ul>
                             </div>
@@ -274,7 +274,7 @@
             </div>
             <div class="row">
                 <div class="col-lg-4 col-md-6 col-sm-12 feature-block">
-                    <div class="feature-block-one wow flipInY" data-wow-delay="0ms" data-wow-duration="350ms">
+                    <div class="feature-block-one wow fadeInUp" data-wow-delay="300ms" data-wow-duration="500ms">
                         <div class="inner-box">
                             <div class="icon-box">
                                 <div class="anim-icon">
@@ -298,7 +298,7 @@
                     </div>
                 </div>
                 <div class="col-lg-4 col-md-6 col-sm-12 feature-block">
-                    <div class="feature-block-one wow flipInY" data-wow-delay="150ms" data-wow-duration="350ms">
+                    <div class="feature-block-one wow fadeInUp" data-wow-delay="600ms" data-wow-duration="500ms">
                         <div class="inner-box">
                             <div class="icon-box">
                                 <div class="anim-icon">
@@ -321,7 +321,7 @@
                     </div>
                 </div>
                 <div class="col-lg-4 col-md-6 col-sm-12 feature-block">
-                    <div class="feature-block-one wow flipInY" data-wow-delay="300ms" data-wow-duration="350ms">
+                    <div class="feature-block-one wow fadeInUp" data-wow-delay="900ms" data-wow-duration="500ms">
                         <div class="inner-box">
                             <div class="icon-box">
                                 <div class="anim-icon">
@@ -345,7 +345,7 @@
                 </div>
 
                 <div class="col-lg-4 col-md-6 col-sm-12 feature-block">
-                    <div class="feature-block-one wow flipInY" data-wow-delay="600ms" data-wow-duration="350ms">
+                    <div class="feature-block-one wow fadeInUp" data-wow-delay="600ms" data-wow-duration="500ms">
                         <div class="inner-box">
                             <div class="icon-box">
                                 <div class="anim-icon">
@@ -368,7 +368,7 @@
                     </div>
                 </div>
                 <div class="col-lg-4 col-md-6 col-sm-12 feature-block">
-                    <div class="feature-block-one wow flipInY" data-wow-delay="900ms" data-wow-duration="350ms">
+                    <div class="feature-block-one wow fadeInUp" data-wow-delay="900ms" data-wow-duration="500ms">
                         <div class="inner-box">
                             <div class="icon-box">
                                 <div class="anim-icon">
@@ -390,7 +390,7 @@
                     </div>
                 </div>
                 <div class="col-lg-4 col-md-6 col-sm-12 feature-block">
-                    <div class="feature-block-one wow flipInY" data-wow-delay="1200ms" data-wow-duration="350ms">
+                    <div class="feature-block-one wow fadeInUp" data-wow-delay="1200ms" data-wow-duration="500ms">
                         <div class="inner-box">
                             <div class="icon-box">
                                 <div class="anim-icon">
@@ -757,7 +757,7 @@
     <!-- service-section end -->
 
 
-    <section class="service-section">
+    <section class="service-section" id="service">
         <div class="auto-container">
             <div class="sec-title text-center">
                 <p>Best Services</p>
@@ -767,7 +767,7 @@
             </div>
             <div class="row">
                 <div class="col-lg-4 col-md-6 col-sm-12 feature-block">
-                    <div class="feature-block-one wow flipInY" data-wow-delay="0ms" data-wow-duration="350ms">
+                    <div class="feature-block-one wow fadeInUp" data-wow-delay="0ms" data-wow-duration="500ms">
                         <div class="inner-box ">
                             <div class="icon-box">
                                 <div class="anim-icon">
@@ -791,7 +791,7 @@
                     </div>
                 </div>
                 <div class="col-lg-4 col-md-6 col-sm-12 feature-block">
-                    <div class="feature-block-one wow flipInY" data-wow-delay="300ms" data-wow-duration="350ms">
+                    <div class="feature-block-one wow fadeInUp" data-wow-delay="300ms" data-wow-duration="500ms">
                         <div class="inner-box">
                             <div class="icon-box">
                                 <div class="anim-icon">
@@ -814,7 +814,7 @@
                     </div>
                 </div>
                 <div class="col-lg-4 col-md-6 col-sm-12 feature-block">
-                    <div class="feature-block-one wow flipInY" data-wow-delay="600ms" data-wow-duration="350ms">
+                    <div class="feature-block-one wow fadeInUp" data-wow-delay="600ms" data-wow-duration="500ms">
                         <div class="inner-box">
                             <div class="icon-box">
                                 <div class="anim-icon">
@@ -842,7 +842,7 @@
 
 
     <!-- news-section -->
-    <section class="news-section">
+    <section class="news-section" id="blog">
         <div class="pattern-layer wow slideInRight animated" data-wow-delay="500ms" data-wow-duration="700ms"
             style="background-image: url(assets/images/shape/pattern-2.png)"></div>
         <div class="auto-container">
@@ -856,7 +856,7 @@
                         <div class="inner-box">
                             <div class="image-holder">
                                 <figure class="image-box"><img src="assets/images/news/cs-1.svg" alt=""></figure>
-                                <div class="link"><a href="#"><i class="fas fa-arrow-right"></i></a>
+                                <div class="link"><a href="Pages/blog1.html"><i class="fas fa-arrow-right"></i></a>
                                 </div>
                             </div>
                             <div class="lower-content">
@@ -864,7 +864,7 @@
                                     <li><span>by</span>&nbsp;<a href="index.html">Nicolas</a></li>
                                     <li><a href="index.html">3 Comments</a></li>
                                 </ul>
-                                <h3><a href="#">How to become a sucess- ful businessman.</a></h3>
+                                <h3><a href="Pages/blog1.html">How to become a sucess- ful businessman.</a></h3>
                                 <p>Since 2019, our client has been helping independent consultants go digital without
                                     spending much.</p>
                             </div>
@@ -876,7 +876,7 @@
                         <div class="inner-box">
                             <div class="image-holder">
                                 <figure class="image-box"><img src="assets/images/news/cs-2.svg" alt=""></figure>
-                                <div class="link"><a href="#"><i class="fas fa-arrow-right"></i></a>
+                                <div class="link"><a href="Pages/blog2.html"><i class="fas fa-arrow-right"></i></a>
                                 </div>
                             </div>
                             <div class="lower-content">
@@ -884,7 +884,7 @@
                                     <li><span>by</span>&nbsp;<a href="index.html">Hinter</a></li>
                                     <li><a href="index.html">5 Comments</a></li>
                                 </ul>
-                                <h3><a href="#">How an Online 2-wheeler services marketplace fixed its Digital marketing
+                                <h3><a href="Pages/blog2.html">How an Online 2-wheeler services marketplace fixed its Digital marketing
                                         strategy</a></h3>
                                 <p>Our client offers door-to-door 2-wheeler repairs & services at 8 major cities in
                                     India.</p>
@@ -897,7 +897,7 @@
                         <div class="inner-box">
                             <div class="image-holder">
                                 <figure class="image-box"><img src="assets/images/news/cs-3.svg" alt=""></figure>
-                                <div class="link"><a href="#"><i class="fas fa-arrow-right"></i></a>
+                                <div class="link"><a href="Pages/blog3.html"><i class="fas fa-arrow-right"></i></a>
                                 </div>
                             </div>
                             <div class="lower-content">
@@ -905,7 +905,7 @@
                                     <li><span>by</span>&nbsp;<a href="index.html">Tailor</a></li>
                                     <li><a href="index.html">4 Comments</a></li>
                                 </ul>
-                                <h3><a href="#">How an emerging B2B SaaS startup built its end-to-end Data pipeline</a>
+                                <h3><a href="Pages/blog3.html">How an emerging B2B SaaS startup built its end-to-end Data pipeline</a>
                                 </h3>
                                 <p>Our client helps companies save time spent on ideation and R&D.</p>
                             </div>
@@ -945,8 +945,7 @@
                                 <figure class="footer-logo"><a href="index.html"><img src="assets/images/logo.svg"
                                             alt=""></a></figure>
                                 <div class="text">
-                                    <p>Fulfil your Data requirements with experts who can both set up the infrastructure
-                                        & extract valuable insights.</p>
+                                    <p>Augment your data team with experts who can both set up the infrastructure & extract valuable insights.</p>
                                 </div>
                             </div>
                         </div>
@@ -958,8 +957,8 @@
                                 <div class="widget-content">
                                     <ul>
                                         <li><a href="index.html">Home</a></li>
-                                        <li><a href="index.html">Services</a></li>
-                                        <li><a href="index.html">Blogs</a></li>
+                                        <li><a href="#service">Services</a></li>
+                                        <li><a href="#blog">Blogs</a></li>
                                         <li><a href="index.html">Contact Us</a></li>
                                     </ul>
                                 </div>
