--- a/Pages/dataengineering.html
+++ b/Pages/dataengineering.html
@@ -784,9 +784,9 @@
                                 </svg>
 
                             </div>
-                            <h3><a href="Pages/dataengineering.html">Data Engineering</a></h3>
+                            <h3><a href="index.html">Data Engineering</a></h3>
                             <p>Build data pipelines & architecture that meet the individual needs of your business.</p>
-                            <div class="btn-box"><a href="Pages/dataengineering.html" class="theme-btn style-two">Learn More</a></div>
+                            <div class="btn-box"><a href="index.html" class="theme-btn style-two">Learn More</a></div>
                         </div>
                     </div>
                 </div>
@@ -806,10 +806,10 @@
                                     </path>
                                 </svg>
                             </div>
-                            <h3><a href="Pages/BusinessIntelligence.html">Business Intelligence</a></h3>
+                            <h3><a href="index.html">Business Intelligence</a></h3>
                             <p>Get intelligent, actionable insights to grow your business with the data at your
                                 disposal.</p>
-                            <div class="btn-box"><a href="Pages/BusinessIntelligence.html" class="theme-btn style-two">Learn More</a></div>
+                            <div class="btn-box"><a href="index.html" class="theme-btn style-two">Learn More</a></div>
                         </div>
                     </div>
                 </div>
@@ -829,9 +829,9 @@
                                     </path>
                                 </svg>
                             </div>
-                            <h3><a href="Pages/MachienLearning.html">Machine Learning & AI</a></h3>
+                            <h3><a href="index.html">Machine Learning & AI</a></h3>
                             <p>Transform your Business with smart predictions with the help of effective ML models.</p>
-                            <div class="btn-box"><a href="Pages/MachienLearning.html" class="theme-btn style-two">Learn More</a></div>
+                            <div class="btn-box"><a href="index.html" class="theme-btn style-two">Learn More</a></div>
                         </div>
                     </div>
                 </div>
