--- a/index.html
+++ b/index.html
@@ -622,7 +622,7 @@
                                 </svg>
 
                             </div>
-                            <h3><a href="service.html">Based on India</a></h3>
+                            <h3><a href="service.html">Based In India</a></h3>
                             <p>Get highly educated, world-class people from India to work for you at prices that are
                                 affordable, and don’t cost you a fortune.</p>
                         </div>
