--- a/Pages/BusinessIntelligence.html
+++ b/Pages/BusinessIntelligence.html
@@ -8,7 +8,7 @@
         <title>Pinhead Analytics</title>
 
         <!-- Fav Icon -->
-        <link rel="icon" href="assets/images/favicon.ico" type="image/x-icon">
+        <link rel="icon" href="../assets/images/favicon.ico" type="image/x-icon">
 
         <!-- Google Fonts -->
         <link
