--- a/index.html
+++ b/index.html
@@ -1004,7 +1004,7 @@
             </div>
             <div class="footer-bottom clearfix">
                 <div class="copyright pull-left">
-                    <p><a href="index.html">Pinhead Analaytics</a> &copy; 2022 All Right Reserved</p>
+                    <p><a href="index.html">Pinhead Analytics</a> &copy; 2022 All Right Reserved</p>
                 </div>
                 <ul class="footer-nav pull-right">
                     <li><a href="index.html">Terms of Service</a></li>
