--- a/index.html
+++ b/index.html
@@ -61,8 +61,7 @@
                             <div class="collapse navbar-collapse show clearfix" id="navbarSupportedContent">
                                 <ul class="navigation clearfix">
                                     <li class="current"><a href="index.html">Home</a></li>
-                                    <li><a href="#service">Services</a></li>
-                                    <li><a href="#blog">Blog</a></li>
+                                    <li><a href="#case-study">Case Study</a></li>
                                     <li><a href="index.html">Contact Us</a></li>
                                 </ul>
                             </div>
@@ -187,8 +186,8 @@
                                 </p>
                             </div>
 
-                            <div class="btn-box wow slideInUp" data-wow-delay="300ms" data-wow-duration="700ms"><a
-                                    href="index.html" class="theme-btn style-one">Know More</a></div>
+                            <!-- <div class="btn-box wow slideInUp" data-wow-delay="300ms" data-wow-duration="700ms"><a
+                                    href="index.html" class="theme-btn style-one">Know More</a></div> -->
                         </div>
                     </div>
                 </div>
@@ -483,9 +482,11 @@
                 </div>
             </div>
         </div>
+        <div id="case-study" ></div>
     </section>
 
     <!-- project-section -->
+    
     <section class="project-section">
         <div class="auto-container">
             <div class="sec-title text-center">
@@ -622,7 +623,7 @@
                                 </svg>
 
                             </div>
-                            <h3><a href="service.html">Based In India</a></h3>
+                            <h3>Based In India</h3>
                             <p>Get highly educated, world-class people from India to work for you at prices that are
                                 affordable, and don’t cost you a fortune.</p>
                         </div>
@@ -644,7 +645,7 @@
                                         mask="url(#path-1-inside-1_104_203)" />
                                 </svg>
                             </div>
-                            <h3><a href="service.html">High talent density</a></h3>
+                            <h3>High talent density</h3>
                             <p>Pinhead Analytics provides you an extremely talented bunch of cutting-edge tech experts
                                 and insightful consultants.</p>
                         </div>
@@ -660,7 +661,7 @@
                                         d="M19.6914 0.715096C17.8784 1.10769 16.4229 2.4686 15.9744 4.1906C15.2248 7.06818 17.4847 10.7409 20.2711 11.1738L20.8026 11.2563L20.1745 11.3155C19.8291 11.3481 18.8942 11.4231 18.097 11.4821C16.2836 11.6164 15.6064 11.7695 14.5701 12.2794C12.8695 13.116 11.5651 14.8826 11.234 16.7971C11.1135 17.4941 10.2182 25.5891 10.2209 25.957C10.2215 26.0259 10.3286 26.1889 10.4591 26.3193C10.7672 26.6276 11.1826 26.6294 11.4695 26.3241C11.6726 26.1079 11.7183 25.8033 12.1191 22C12.3564 19.7496 12.6116 17.5632 12.6862 17.1413C13.0031 15.3534 14.2209 13.8875 15.8569 13.3246C16.7834 13.0059 18.2088 12.8838 20.9958 12.8847C25.3747 12.886 26.5215 13.1787 27.9287 14.654C28.7102 15.4734 29.2575 16.6867 29.2575 17.6001C29.2575 18.2417 30.2201 25.9827 30.3241 26.1769C30.663 26.8101 31.6732 26.5628 31.6732 25.8466C31.6732 25.7022 31.4973 24.1396 31.2823 22.3742C31.0673 20.6089 30.8499 18.6712 30.7994 18.0683C30.7489 17.4654 30.6384 16.7045 30.5539 16.3773C30.119 14.6929 28.7557 13.0124 27.2229 12.2713C25.998 11.6791 25.6247 11.613 21.8655 11.3222L20.9958 11.255L21.5556 11.1785C24.2327 10.8127 26.5343 7.27902 25.937 4.4515C25.3586 1.71316 22.6273 0.0792854 19.6914 0.715096ZM22.3759 2.3225C23.0486 2.57286 23.6295 3.02392 24.0129 3.59354C24.4026 4.17263 24.5215 4.59499 24.5222 5.40164C24.5236 7.06972 23.4681 8.79636 22.0305 9.4773C21.5108 9.72351 21.3355 9.75974 20.8227 9.72679C19.4199 9.63664 18.1251 8.46619 17.5557 6.77356C17.1011 5.42241 17.3134 4.14963 18.145 3.23959C19.165 2.12364 20.8565 1.75703 22.3759 2.3225ZM15.1505 17.84C14.8945 18.0474 14.874 18.2213 14.5599 22.86L14.3423 26.0725L14.5697 26.3145C14.8649 26.6288 15.3291 26.6385 15.6129 26.3363C15.8055 26.1314 15.8368 25.8774 16.0646 22.6788C16.3818 18.2253 16.3816 18.1241 16.0548 17.8671C15.7419 17.621 15.4325 17.6117 15.1505 17.84ZM25.7263 17.904C25.4337 18.1965 25.4317 17.9572 25.7645 22.535C26.0228 26.0865 26.0373 26.2008 26.2536 26.3759C26.6407 26.6893 27.2533 26.5649 27.4145 26.14C27.4616 26.016 27.3814 24.308 27.2208 22.015L26.9468 18.1016L26.6956 17.8842C26.3689 17.6014 26.0217 17.6084 25.7263 17.904ZM20.6123 23.1121C20.514 23.184 19.9078 24.2817 19.2652 25.5514L18.097 27.8601L15.6679 28.2129C14.3319 28.4071 13.1432 28.5963 13.0263 28.6334C12.7523 28.7202 12.5327 29.228 12.6432 29.5188C12.6886 29.6379 13.5465 30.541 14.5499 31.5256L16.3741 33.3158L15.9444 35.8291C15.7081 37.2114 15.542 38.4509 15.5753 38.5836C15.6459 38.8647 16.1401 39.1543 16.4055 39.07C16.5062 39.038 17.5802 38.489 18.7922 37.8498L20.9958 36.6878L21.7206 37.0596C22.1191 37.2641 23.1926 37.8191 24.1061 38.293C25.5968 39.0665 25.7917 39.1434 26.0094 39.0442C26.1427 38.9835 26.3208 38.8285 26.4051 38.6998C26.5481 38.4816 26.5284 38.2931 26.1102 35.8877L25.6619 33.3095L27.5595 31.4549C29.2216 29.8305 29.4567 29.5634 29.454 29.3031C29.4475 28.6958 29.264 28.6289 26.4769 28.2187C25.0838 28.0137 23.927 27.8276 23.906 27.8052C23.885 27.7827 23.3439 26.7156 22.7035 25.4338C22.0631 24.152 21.4677 23.0757 21.3804 23.0423C21.1222 22.9431 20.8037 22.9721 20.6123 23.1121ZM21.9012 27.1744C22.4532 28.3181 22.841 29.0045 22.9887 29.0996C23.1213 29.1849 23.9944 29.3584 25.0542 29.5101C26.064 29.6545 26.9233 29.8019 26.9638 29.8375C27.0044 29.8731 26.3847 30.5443 25.5868 31.3289C24.4206 32.4759 24.1371 32.8061 24.1406 33.0138C24.1431 33.1559 24.2903 34.0983 24.4677 35.1081C24.6452 36.1179 24.7842 36.9516 24.7766 36.9608C24.7691 36.9701 23.9805 36.5618 23.0243 36.0534C22.0681 35.545 21.1746 35.128 21.0388 35.1267C20.903 35.1253 20.0116 35.5365 19.058 36.0406C18.1043 36.5446 17.3127 36.931 17.2989 36.8993C17.285 36.8676 17.4219 35.975 17.6029 34.9159C17.801 33.7563 17.9021 32.9118 17.8569 32.7929C17.8156 32.6844 17.145 31.975 16.3668 31.2166C15.5758 30.4459 15.006 29.8204 15.0749 29.7986C15.1427 29.7771 16.0243 29.6446 17.0341 29.5042C18.0439 29.3639 18.9593 29.1913 19.0684 29.1209C19.1778 29.0502 19.6546 28.1854 20.1304 27.1949C20.6054 26.2061 21.005 25.397 21.0186 25.397C21.0322 25.397 21.4293 26.1968 21.9012 27.1744ZM6.02115 26.8435C5.92636 26.9483 5.49028 27.7684 5.05198 28.6659L4.25509 30.298L3.54246 30.4025C3.15054 30.46 2.29258 30.5823 1.63599 30.6745C0.330166 30.8577 0.111787 30.9641 0.0150624 31.4644C-0.0440738 31.7704 0.00723545 31.8364 1.38331 33.2236L2.81311 34.6649L2.49762 36.5655C2.14938 38.6638 2.16116 38.8046 2.70402 39.0294C2.96868 39.1391 3.0829 39.0974 4.45453 38.391C5.26156 37.9754 6.04927 37.5582 6.20494 37.4639L6.48786 37.2924L8.25857 38.2132C9.80249 39.0161 10.0632 39.1228 10.2946 39.0459C10.4406 38.9974 10.6244 38.8436 10.7031 38.7041C10.8327 38.474 10.8167 38.2729 10.5308 36.5392L10.2155 34.6278L11.6198 33.2313C13.0566 31.8025 13.1634 31.6355 12.9252 31.1905C12.7632 30.8877 12.5628 30.8323 10.6413 30.5588L8.80249 30.2969L7.94202 28.5632C7.46864 27.6097 7.00821 26.7898 6.91873 26.7413C6.64363 26.5923 6.2031 26.6424 6.02115 26.8435ZM35.0321 26.8223C34.9499 26.9152 34.5081 27.7414 34.0504 28.6582C33.5926 29.575 33.1798 30.325 33.1329 30.325C32.7729 30.325 29.551 30.8373 29.3847 30.921C29.0957 31.0665 28.9346 31.4818 29.0498 31.7846C29.0997 31.916 29.7322 32.5949 30.4552 33.2931C31.3493 34.1566 31.7698 34.6297 31.7698 34.7722C31.7698 34.8875 31.6378 35.7656 31.4765 36.7233C31.2042 38.3395 31.1941 38.4818 31.3366 38.6993C31.4211 38.8283 31.5995 38.9835 31.7332 39.0444C31.951 39.1437 32.138 39.0718 33.5399 38.3495C34.3999 37.9064 35.1872 37.4864 35.2895 37.4162C35.4546 37.303 35.6748 37.3923 37.2457 38.21C39.0837 39.1667 39.2189 39.2032 39.6208 38.8502C39.8555 38.6442 39.8373 38.2793 39.4945 36.3159L39.1994 34.625L40.6121 33.2559C41.9821 31.9285 42.0241 31.876 41.9945 31.5263C41.945 30.9404 41.7264 30.8506 39.6339 30.5563L37.7868 30.2964L36.931 28.5633C36.4603 27.6102 36.0007 26.7904 35.9098 26.7417C35.6424 26.5987 35.1936 26.6398 35.0321 26.8223ZM7.15228 30.284C7.48072 30.9523 7.83283 31.5437 7.93467 31.5983C8.07633 31.674 10.2581 32.0499 10.6273 32.0621C10.6643 32.0634 10.261 32.485 9.73108 32.9992C9.20117 33.5135 8.74209 34.0359 8.71079 34.1604C8.67957 34.2848 8.74982 34.9328 8.86684 35.6003C8.98395 36.2678 9.05623 36.8373 9.02763 36.866C8.99903 36.8946 8.47357 36.6521 7.86008 36.3272C7.24659 36.0021 6.6501 35.7362 6.53454 35.7362C6.41907 35.7362 5.78828 36.0183 5.13276 36.3633C4.47733 36.7082 3.94134 36.98 3.94172 36.9672C3.94201 36.9545 4.02869 36.444 4.1343 35.8328C4.44023 34.0622 4.47975 34.2012 3.34601 33.0637L2.36457 32.0788L2.69378 32.022C2.87495 31.9908 3.47772 31.8992 4.03352 31.8184C4.58923 31.7377 5.11102 31.6109 5.19305 31.5365C5.27499 31.4622 5.6016 30.8767 5.91873 30.2352C6.23576 29.5937 6.50874 29.0689 6.52516 29.0689C6.54169 29.0689 6.82384 29.6157 7.15228 30.284ZM36.1601 30.3126C36.503 30.9966 36.8551 31.5838 36.9427 31.6174C37.0304 31.651 37.6725 31.7672 38.3697 31.8756C39.0668 31.9839 39.6487 32.0841 39.6627 32.0981C39.6767 32.1122 39.2573 32.5238 38.7307 33.0129C38.2041 33.502 37.7451 33.9906 37.7108 34.0987C37.6765 34.2069 37.7433 34.8615 37.8592 35.5536C37.9751 36.2457 38.0462 36.8357 38.0172 36.8647C37.9882 36.8937 37.4655 36.6516 36.8555 36.3268C36.2454 36.0019 35.649 35.7362 35.53 35.7362C35.411 35.7362 34.7781 36.0195 34.1236 36.3658C32.9392 36.9923 32.9338 36.9941 32.9843 36.7282C33.2109 35.5327 33.3818 34.3161 33.3401 34.1935C33.3124 34.112 32.854 33.6027 32.3213 33.062L31.3529 32.0788L31.6821 32.022C31.8633 31.9908 32.4667 31.8991 33.0233 31.8182C33.7522 31.7123 34.092 31.6178 34.2383 31.4804C34.3499 31.3755 34.6723 30.79 34.9548 30.1792C35.2372 29.5685 35.4837 29.0689 35.5026 29.0689C35.5215 29.0689 35.8174 29.6285 36.1601 30.3126Z" />
                                 </svg>
                             </div>
-                            <h3><a href="service.html">Subject matter expertise</a></h3>
+                            <h3>Subject matter expertise</h3>
                             <p>Most of our experts hold either a PhD, or possess decades of individual experience
                                 working at a specific industry.</p>
                         </div>
@@ -678,7 +679,7 @@
                                     <path fill-rule="evenodd" clip-rule="evenodd" d="M9.62578 0.33754C8.45213 0.752724 7.07112 2.21236 6.74686 3.38068C6.58798 3.95289 6.49659 7.63272 6.49589 13.4998L6.4945 22.7197H8.11813H9.74175V13.4588V4.19759L10.3529 3.717C10.9532 3.24476 11.1763 3.23618 22.8611 3.23618H34.7583L35.2389 3.84735C35.7142 4.45134 35.7198 4.63388 35.7198 19.5142V34.5701L35.1503 35.1393L34.5811 35.7087H27.6636H20.7458L19.3028 37.1646C18.5093 37.9653 17.8599 38.6959 17.8599 38.7882C17.8599 39.0594 34.5598 38.9856 35.5521 38.7101C36.6951 38.3925 37.8878 37.3277 38.4873 36.0891C38.9575 35.1179 38.967 34.7943 38.9656 19.6891C38.9649 9.60867 38.8798 3.97562 38.72 3.39993C38.3874 2.20216 36.7719 0.567399 35.6038 0.246385C34.9826 0.0756726 30.6886 -0.00550882 22.6148 0.000289838C12.825 0.00771213 10.3789 0.0710336 9.62578 0.33754ZM17.9158 6.94616C16.9787 7.51744 16.2381 8.6948 16.2374 9.6147C16.2367 10.6172 16.9265 11.8437 17.8307 12.4477C18.3395 12.7877 18.5017 13.0062 18.2945 13.0726C18.1192 13.1287 17.5623 13.3024 17.0566 13.4585C15.665 13.8883 13.8117 15.8585 13.3562 17.3928C12.6803 19.6684 12.1002 19.4724 19.5132 19.4724H26.0374L25.8859 18.5254C25.5355 16.3347 23.6734 13.9973 21.8273 13.4312C21.3674 13.2901 20.8404 13.1259 20.6562 13.0663C20.4261 12.9918 20.5535 12.8167 21.0642 12.5061C23.2396 11.1831 23.2329 8.27614 21.0512 6.94616C20.0875 6.35841 18.8795 6.35841 17.9158 6.94616ZM29.2253 11.3543V12.9779H30.8489H32.4725V11.3543V9.73068H30.8489H29.2253V11.3543ZM29.2253 17.8488V19.4724H30.8489H32.4725V17.8488V16.2252H30.8489H29.2253V17.8488ZM12.989 23.7201C12.989 24.5133 13.1238 24.8494 13.6396 25.3437L14.29 25.9669H23.3814H32.4725V24.3433V22.7197H22.7308H12.989V23.7201ZM9.74175 29.3302V32.4614H4.87088H0V34.0851V35.7087H4.86438H9.72876L9.79324 38.8543L9.85773 42L13.8266 38.0381L17.7954 34.0762L13.8586 30.1376C11.6934 27.9712 9.88115 26.1989 9.83175 26.1989C9.78234 26.1989 9.74175 27.608 9.74175 29.3302ZM19.1356 30.8378L20.7467 32.4614H26.6096H32.4725V30.8378V29.2142H24.9985H17.5245L19.1356 30.8378Z" fill="white" stroke="#6D7FEF" stroke-width="2" mask="url(#path-1-inside-1_104_225)"/>
                                 </svg>
                             </div>
-                            <h3><a href="service.html">Decades of expertise</a></h3>
+                            <h3>Decades of expertise</h3>
                             <p>Our team boasts a collective experience of over 5 decades of working in the data
                                 engineering & decision sciences space.
                             </p>
@@ -728,7 +729,7 @@
                                         mask="url(#path-6-inside-4_104_214)" />
                                 </svg>
                             </div>
-                            <h3><a href="service.html">Top Class Talent</a></h3>
+                            <h3>Top Class Talent</h3>
                             <p>Our experts are a rare combination of industrial expertise & quantitative ability which
                                 enable them to solve business challenges.</p>
                         </div>
@@ -745,7 +746,7 @@
                                 </svg>
 
                             </div>
-                            <h3><a href="service.html">360° partnership</a></h3>
+                            <h3>360° partnership</h3>
                             <p>We maintain an end-to-end relationship with our partners. We always ensure to take you
                                 through success from ideation to execution.</p>
                         </div>
@@ -757,7 +758,7 @@
     <!-- service-section end -->
 
 
-    <section class="service-section" id="service">
+    <!-- <section class="service-section" id="service">
         <div class="auto-container">
             <div class="sec-title text-center">
                 <p>Best Services</p>
@@ -838,11 +839,11 @@
 
             </div>
         </div>
-    </section>
+    </section> -->
 
 
     <!-- news-section -->
-    <section class="news-section" id="blog">
+    <!-- <section class="news-section" id="blog">
         <div class="pattern-layer wow slideInRight animated" data-wow-delay="500ms" data-wow-duration="700ms"
             style="background-image: url(assets/images/shape/pattern-2.png)"></div>
         <div class="auto-container">
@@ -914,7 +915,7 @@
                 </div>
             </div>
         </div>
-    </section>
+    </section> -->
     <!-- news-section end -->
 
 
@@ -957,23 +958,8 @@
                                 <div class="widget-content">
                                     <ul>
                                         <li><a href="index.html">Home</a></li>
-                                        <li><a href="#service">Services</a></li>
-                                        <li><a href="#blog">Blogs</a></li>
+                                        <li><a href="#case-study">Case Study</a></li>
                                         <li><a href="index.html">Contact Us</a></li>
-                                    </ul>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="col-lg-3 col-md-6 col-sm-12 footer-column">
-                            <div class="footer-widget links-widget">
-                                <div class="widget-title">
-                                    <h3>Featured Services</h3>
-                                </div>
-                                <div class="widget-content">
-                                    <ul>
-                                        <li><a href="index.html">Data Engineering</a></li>
-                                        <li><a href="index.html">Business intelligence</a></li>
-                                        <li><a href="index.html">Machine Learning & AI</a></li>
                                     </ul>
                                 </div>
                             </div>
